--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,18 @@
         grid-row: 2/5;
         padding-right:5px;
     }
+	.placeholder {
+        grid-column: 2/5;
+        grid-row: 2/5;
+        padding-right:5px;
+		z-index:1;
+        opacity: .8;
+    }
+	
 	.start{
 		grid-column: 3/4;
 		grid-row: 3/4;
-		z-index:1;
+		z-index:10;
 		background-color: white;
 		color:black;
 		padding: 40px; 
