--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,19 @@
 		color:black;
 		padding: 40px; 
 	}
+	.slide_panel_wrap {
+		grid-column: 4 / 6;
+		grid-row: 3/4;
+		z-index:2;
+		display:none;
+		background-color: #fff;
+		color:black;
+		padding:10px;
+	}
+	.filters {
+		grid-column: 5;
+		grid-row: 1;
+		z-index:2;
+		padding: 10px;
+		display:none;
+	}
